// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Null and Undefined Children test should render null or undefined in children without errors 1`] = `
<button
  class="btn btn-default btn-middle"
/>
`;

exports[`Button react fragment test should render React.Fragment without error. 1`] = `
<button
  class="btn btn-default btn-middle"
>
  text
</button>
`;

exports[`Button render test render correctly 1`] = `
<DocumentFragment>
  <button
    class="btn btn-default btn-middle"
  />
</DocumentFragment>
`;
